src/style/game.css
button,
input {
  min-height: 30px;
  min-width: 30px;
  font-size: 19px;
  padding: 1px 5px;
  background-color: whitesmoke;
  color: black;
  border: 2px solid whitesmoke;
  border-color: gainsboro;
  flex-grow: 1;
  fill: black;
  /*line-height: 0px;*/
  user-select: none;
}
button {
  cursor: pointer;
  margin-bottom: -2px;
}
.simulation-button {
  z-index: 1;
  width: fit-content;
}
.play-pause-button {
  min-width: 80px;
  display: inline-flex;
  flex-direction: row;
  align-items: center;
}
.element-tray button.element-control {
  min-width: 30px;
  width: 30px;
  flex-grow: 0;
  font-size: 20px;
}
#worldCanvas {
  z-index: 1;
  width: 100%;
  border: 3px ridge gray;
  /* border-left: 1px solid black; */
  touch-action: pinch-zoom;
}

.element-tray button {
  min-width: 80px;
}
.shrink {
  transform: scale(0.8);
  filter: saturate(150%);
  transition: all 50ms linear;
  border-color: red !important;
}
.spacer {
  flex-grow: 10;
  width: auto;
}

.element-tray {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  margin-bottom: 2px;
}
.update-scheme-tray {
  display: flex;
}
.extras-tray {
  display: flex;
  padding: 5px;
  flex-direction: column;
  flex-wrap: wrap;
}
.extras-tray .Auth {
  position: fixed;
  right: 5px;
  bottom: 60px;
}
.controls-row {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
}
.controls-row span {
  display: flex;
}
.controls-row * {
  flex-grow: 0;
}

textarea#json {
  width: 100%;
  height: 60px;
}
summary {
  font-size: 1rem;
  color: black;
}
.wordmark {
  position: fixed;
  bottom: 1px;
  width: 180px;
  right: 0px;
  margin-bottom: 0;
  pointer-events: none;
  /* image-rendering: pixelated; */
  /* opacity: 0.5; */
}

@media only screen and (max-width: 700px) {
  .extras-tray .Auth {
    position: relative;
    float: right;
    bottom: 0px;
  }
}

.browse-info {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  padding-bottom: 2px;
  /*max-width: 400px;*/
  /*max-width: calc(50vw - 5px);*/
}

.element-set-button {
  flex-grow: 0;
  height: auto;
  text-align: start;
  padding: 0px;
}

button.selected {
  border-color: black;
  background: black;
  color: white;
  /* border-radius: 6px; */
  text-shadow: 1px 0px rgba(0, 0, 0, 0.5), -1px 0px rgba(0, 0, 0, 0.5),
    0px 1px rgba(0, 0, 0, 0.5), 0px -1px rgba(0, 0, 0, 0.5);
}
button:hover {
  filter: brightness(0.9);
}

